--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>Fresher, Completed masters(M.Sc) in Data Science and  Aspire to start my career as data analyst in the software field and eager to contribute my skills and knowledge to the succeful development of the software projects. I am skilled in python, SQL and C programming languages. and I have basic knowledge in Machne Learning.</p>
+								<p>Fresher, Completed masters(M.Sc) in Data Science and  Aspire to start my career as data analyst in the software field and eager to contribute my skills and knowledge to the successful development of the software projects. I am skilled in python, SQL and C programming languages and I have basic knowledge in Machine Learning.</p>
 								
 
 							</div>
@@ -268,7 +268,7 @@
 
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
-								<p><a href="https://www.linkedin.com/in/rishabhnmishra/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="www.linkedin.com/in/yuvi2001/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
