--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
-								<p><a href="www.linkedin.com/in/yuvi2001/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="www.linkedin.com/in/yuvi2001" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
