--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2022-2024</span>
-    					<h2>Master of Sciece(Data Science)</h2>
-    					<span class="position">P.B Siddhartha Collge of Arts and Science, Vijayawada</span>
+    					<h2>Master of Science(Data Science)</h2>
+    					<span class="position">P.B Siddhartha College of Arts and Science, Vijayawada</span>
     					<p class="mt-4">CGPA:8.8</p>
     				</div>
     			</div>
@@ -303,7 +303,7 @@
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2019-2022</span>
     					<h2>Bachelor of Scienc(Computer Science)</h2>
-    					<span class="position">P.R Government Collge(Autonomous), Kakinada</span>
+    					<span class="position">P.R Government College(Autonomous), Kakinada</span>
     					<p class="mt-4">CGPA: 8.6</p>
     				</div>
 				</div>
@@ -331,7 +331,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/yuvarajuballa/job-recommendation">Job Recommendation System Usng NLP</a></h3>
+                <h3 class="heading"><a href="https://github.com/yuvarajuballa/job-recommendation">Job Recommendation System Using NLP</a></h3>
                 <p>Created a job recommendation system according to the candidate profile by analyzing the past trends followed by
 					companies in hiring such candidates.</p>
               </div>
@@ -350,8 +350,8 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/yuvarajuballa/face-mask/tree/main/face_mask_detection-master">Face Mask Detection System Using DL&ML</a></h3>
-                <p>. Created an application for finding whether a person wearing a mask or not. It generates a green rectangularlabel around
-					the face of person who wears the mask, otherwise it generates red rectangular label with alarmsound.</p>
+                <p>Created an application for finding whether a person wearing a mask or not. It generates a green rectangular label around
+					the face of person who wears the mask, otherwise it generates red rectangular label with alarm sound.</p>
 				</div>
             </div>
 	      </div>
@@ -405,7 +405,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">yuvarajuballa2001@gmail.com.com</a></p>
+	            <p><a href="mailto:info@yoursite.com">yuvarajuballa2001@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -423,7 +423,7 @@
 			<br>
 			<div class="row justify-content-center">
 				<div class="col-md-7 ftco-animate text-center">
-					<h2>If you have any Question, feel free to contact me.  </span></h2>
+					<h2>If you have any queries, feel free to contact me.  </span></h2>
 				</div>
 			</div>
 				<br>
