--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/yuvarajuballa/job-recommendation">Job Recommendation System Using NLP</a></h3>
+                <h3 class="heading"><a href="https://github.com/yuvarajuballa/job-recommendation">T20 Cricket Data Analytics Dashboard</a></h3>
                 <p>Scraped player data from ESPN Cricinfo, cleaned and processed it in Python.Built a Power BI dashboard to analyze player performance and form the optimal T20 team.
 		        Achieved 90% match-winning prediction based on analytics.</p>
               </div>
