--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 					  <li class="ftco-animate normal-txt">Find me on  </li>
 					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/yuvi2001"><span class="icon-linkedin"></span></a></li>  
 					  <li class="ftco-animate"><a href="https://www.facebook.com/Yuvaraju Balla"><span class="icon-facebook"></span></a></li>
-				      <li class="ftco-animate"><a href="https://www.instagram.com/user_uvi/"><span class="icon-instagram"></span></a></li>
+				      <li class="ftco-animate"><a href="https://www.instagram.com/yuvraj_balla/"><span class="icon-instagram"></span></a></li>
 					</ul>
 				<br>
 		   </div>
